fix: character width & canvas scrollbar

--- a/src/globals.css
+++ b/src/globals.css
@@ -3,3 +3,8 @@
   height: 100%;
   overflow: scroll;
 }
+
+#canvas::-webkit-scrollbar {
+  width: 0px;
+  background: none;
+}
